[project]
name = "riverqueue"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eric Hauser", email = "ewhauser@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.30",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "testcontainers>=4.5.1",
    "psycopg2-binary>=2.9.9",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/riverqueue"]